start of  filemanagement unification

--- a/www/adminRoot.html
+++ b/www/adminRoot.html
@@ -25,6 +25,20 @@
 </head>
 
 <body>
+    <div class="loader-wraper">
+        <div class="loader">
+            <div class="duo duo1">
+                <div class="dot dot-a"></div>
+                <div class="dot dot-b"></div>
+            </div>
+            <div class="duo duo2">
+                <div class="dot dot-a"></div>
+                <div class="dot dot-b"></div>
+            </div>
+            <br/><br/>
+            <p>Cargando...</p>
+        </div>
+    </div>
     <nav class="navbar navbar-inverse top-bar navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -159,7 +173,7 @@
                                 <div class="dropdown">
                                     <div id="myDropdown" class="dropdown-content">
                                     </div>
-                                  </div>
+                                </div>
                                 <span class="tooltiptext">Usuario con el que se iniciará sesión
                                     `example@example.com`</span>
                             </div>
