--- a/www/fileManagement.html
+++ b/www/fileManagement.html
@@ -457,6 +457,7 @@
                         return data.data.map(e => { return [1,2,3,4,5,6] })
                     }
                 },
+                "pageLength": 50,
                 "fnCreatedRow": function (nRow, aData, iDataIndex) {
                     $(nRow).attr('id', aData[3]);
                 },
