--- a/www/fileManagement.html
+++ b/www/fileManagement.html
@@ -650,7 +650,7 @@
                 },
                 "lengthMenu": [10, 25, 50],
                 'ajax': {
-                    url: `/api/org/${localStorage.getItem('org')}/root`,
+                    url: `/api/org/${JSON.parse(localStorage.getItem('org'))._id}/root`,
                     method: 'get',
                     dataSrc: data => {
                         currentFolder = data.id || data._id
