--- a/www/login.html
+++ b/www/login.html
@@ -1,226 +1,308 @@
 <html lang="es">
 
-    <head>
-        <title>DOCSYS - Login</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script type="text/javascript" src="javascripts/jquery-ui-1.12.1/jquery-ui.js"></script>
-        <script type="text/javascript" src="javascripts/login.js"></script>
-        <link rel="icon" type="image/png" href="../img/logoLogin.png" />
-        <link href="stylesheets/snackbar.css" rel="stylesheet" type="text/css"/>
-        <script src="javascripts/snackbar.js" type="text/javascript"></script>
-        <link href="stylesheets/general.css" rel="stylesheet" type="text/css"/>
-    </head>
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Roboto');
-        * {
-            font-family: 'Roboto', sans-serif;
+<head>
+    <title>DOCSYS - Login</title>
+    <meta charset="utf-8">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="javascripts/jquery-ui-1.12.1/jquery-ui.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="javascripts/login.js"></script>
+    <script src="/javascripts/jquery-confirm/jquery-confirm.min.js"></script>
+    <script src="https://kit.fontawesome.com/8266a07a66.js"></script>
+    <link href="stylesheets/snackbar.css" rel="stylesheet" type="text/css" />
+    <script src="javascripts/snackbar.js" type="text/javascript"></script>
+    <link href="stylesheets/general.css" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/javascripts/jquery-confirm/jquery-confirm.min.css">
+</head>
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-        }
-        html {
-            height: 100%;
-        }
-        .footer{
-            flex-shrink: 0;
-        }
-        body {
-            padding: 0;
-            margin: 0;
-            background:#f2f2f6;
-            height: 100%;
-            width: 100%;
-            box-sizing: border-box;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-        }
+    * {
+        font-family: 'Roboto', sans-serif;
 
-        .container_login {
-            margin-top: calc(50vh - 170px);
-            background: #fff;
-            min-width: 400px;
-            max-width: 400px;
-            border-radius: 2px;
-            border: 1px solid #c0c0c0;
-            box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 3px 0.1px;
-            color: #555;
-            display: inline;
-        }
+    }
 
-        .logo {
-            width: 250px;
-            text-align: center;
-        }
+    html {
+        height: 100%;
+    }
 
-        .input_group {
-            display: flex;
-            flex-direction: column;
-        }
+    .footer {
+        flex-shrink: 0;
+    }
 
-        .container_logo {
-            text-align: center;
-            width: 100%;
-            border-bottom: 1px solid #c0c0c0;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            box-sizing: border-box;
-            height: 120;
-        }
+    body {
+        padding: 0;
+        margin: 0;
+        background: #f2f2f6;
+        height: 100%;
+        width: 100%;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-        .input_text {
-            border: none;
-            padding: 10px;
-            margin-bottom: 5px;
-            border: 1px solid #c0c0c0;
-        }
+    .container_login {
+        margin-top: calc(50vh - 170px);
+        background: #fff;
+        min-width: 400px;
+        max-width: 400px;
+        border-radius: 2px;
+        border: 1px solid #c0c0c0;
+        box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 3px 0.1px;
+        color: #555;
+        display: inline;
+        max-height: 340px;
+    }
 
-        .pass_forget a {
-            font-size: 1em;
-            text-decoration: underline;
-            color: #555
-        }
+    .logo {
+        width: 250px;
+        text-align: center;
+    }
 
-        .pass_forget a:hover {
-            color: steelblue;
-        }
+    .input_group {
+        display: flex;
+        flex-direction: column;
+    }
 
-        .pass_forget_container {
-            font-size: 12px;
-            text-align: center;
-        }
+    .container_logo {
+        text-align: center;
+        width: 100%;
+        border-bottom: 1px solid #c0c0c0;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        box-sizing: border-box;
+        height: 120;
+    }
 
-        .button_group {
-            text-align: center;
-        }
-        /*.iniciar_sesion_button{
+    .input_text {
+        border: none;
+        padding: 10px;
+        margin-bottom: 5px;
+        border: 1px solid #c0c0c0;
+    }
+
+    .pass_forget a {
+        font-size: 1em;
+        text-decoration: underline;
+        color: #555
+    }
+
+    .pass_forget a:hover {
+        color: steelblue;
+    }
+
+    .pass_forget_container {
+        font-size: 12px;
+        text-align: center;
+    }
+
+    .button_group {
+        text-align: center;
+    }
+
+    /*.iniciar_sesion_button{
                 padding: 5px 10px;
         }*/
 
-        .reset_button,
-        .iniciar_sesion_button {
-            padding: 10px 10px;
-            border: none;
-            background: #fff;
-            border: 1px solid #c0c0c0;
-            border-radius: 2px;
-            color: #555
+    .reset_button,
+    .iniciar_sesion_button {
+        padding: 10px 10px;
+        border: none;
+        background: #fff;
+        border: 1px solid #c0c0c0;
+        border-radius: 2px;
+        color: #555
+    }
+
+    .icono {
+        font-size: 20px;
+        vertical-align: middle;
+        margin-right: 20px;
+    }
+
+    .reset_button:hover,
+    .iniciar_sesion_button:hover {
+        background: #f2f2f6;
+        cursor: pointer;
+    }
+
+    .login_form {
+        box-sizing: border-box;
+        display: inline-block;
+        float: inline-start;
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+
+    .invalido {
+        border: 1px solid red;
+    }
+
+    @media (max-width:720px) {
+        .container_login {
+            width: 95%;
+            box-sizing: border-box;
         }
-        .icono{
-            font-size:20px;
-            vertical-align: middle;
-            margin-right: 20px;
-        }
-        .reset_button:hover,
-        .iniciar_sesion_button:hover {
-            background: #f2f2f6;
-            cursor: pointer;
+    }
+
+    #load-bar {
+        position: relative;
+        width: 100%;
+        height: 6px;
+        background-color: #7ed9e9;
+        display: none;
+    }
+
+    .bar {
+        content: "";
+        /*display: inline;*/
+        position: absolute;
+        width: 0;
+        height: 100%;
+        left: 50%;
+        text-align: center;
+    }
+
+    .bar:nth-child(1) {
+        background-color: #353fc9;
+        animation: loading 3s linear infinite;
+    }
+
+    .bar:nth-child(2) {
+        background-color: #e4f3e0;
+        animation: loading 3s linear 1s infinite;
+    }
+
+    .bar:nth-child(3) {
+        background-color: #00c7ac;
+        animation: loading 3s linear 2s infinite;
+    }
+
+    @keyframes loading {
+        from {
+            left: 50%;
+            width: 0;
+            z-index: 1000;
         }
 
-        .login_form {
-            padding: 25px;
-            box-sizing: border-box;
-            display: inline-block;
-            float: inline-start;
-        }
-        .invalido{
-            border:1px solid red;
-        }
-        @media (max-width:720px){
-            .container_login{
-                width:95%;
-                box-sizing: border-box;
-            } 
-        }
-        #load-bar {
-            position: relative;
+        33.333333% {
+            left: 0;
             width: 100%;
-            height: 6px;
-            background-color: #7ed9e9;
-            display: none;
+            z-index: 10;
         }
-        .bar {
-            content: "";
-            /*display: inline;*/
-            position: absolute;
-            width: 0;
-            height: 100%;
-            left: 50%;
-            text-align: center;
+
+        to {
+            left: 0;
+            width: 100%;
         }
-        .bar:nth-child(1) {
-            background-color: #353fc9;
-            animation: loading 3s linear infinite;
+    }
+
+    .button {
+        padding: 10px;
+    }
+
+    .max_width {
+        width: 360px;
+    }
+
+    @media(max-width: 400px) {
+        .max_width {
+            width: 300px;
+            margin-left: 46px;
         }
-        .bar:nth-child(2) {
-            background-color: #e4f3e0;
-            animation: loading 3s linear 1s infinite;
+
+        .mx-auto {
+            font-size: 70px !important;
         }
-        .bar:nth-child(3){
-            background-color: #00c7ac;
-            animation: loading 3s linear 2s infinite;
+
+        #login_form2 {
+            margin-left: 26px !important;
         }
-        @keyframes loading {
-            from {left: 50%; width: 0;z-index:1000;}
-            33.333333% {left: 0; width: 100%;z-index: 10;}
-            to {left: 0; width: 100%;}
-        }
-        .button{
-            padding: 10px;
-        }
-        .max_width{
-            width: 400px;
-        }
-        .min_width{
-            width: 0%;
-        }
-    </style>
-    <body>
-        <div class="container_login">
-            <div class="container_logo">
-                <a class="navbar-brand mx-auto mx-auto-top" href="#"
-                    style="text-shadow: 0 0 5px black, 0 0 10px rgba(0,0,0,.3);color: white; font-size: 90px; vertical-align: middle; text-decoration: none;">DOC<span
-                        style="text-shadow: 0 0 3.5px black; color: #3399ff">SYS</span></a>
+    }
+
+    .min_width {
+        width: 0%;
+    }
+</style>
+
+<body>
+    <div class="loader-wraper">
+        <div class="loader">
+            <div class="duo duo1">
+                <div class="dot dot-a"></div>
+                <div class="dot dot-b"></div>
             </div>
-            <div style="width: 100vw">
-                <form id="login_form" class="login_form max_width" onsubmit="iniciarSesion()">
-                    <div class="input_group">
-                        <input class="input_text" id="email" type="text" placeholder="Usuario">
-                    </div>
-                    <br>
-                    <div class="button_group">
-                        <input class="button button_green" id="button_entrar" type="submit" value="Siguiente">
-                    </div>
-                </form> 
-                <form title="Cambio de contraseña" id="change_pass" onsubmit="changePass()" class="login_form min_width" style="opacity: 0">
-                    <div class="input_group">
-                        <input class="input_text" id="contrasenac" type="password" placeholder="Contraseña">
-                        <input class="input_text" id="contrasenac1" type="password" placeholder="Repita la Contraseña">
-                    </div>
-                    <br>
-                    <div class="button_group">
-                        <input class="button button_green" id="button_entrar" type="submit" value="Cambiar">
-                    </div>
-                </form>
-                <form id="login_form2" class="login_form min_width" onsubmit="iniciarSesion2()" style="margin-left:-50px;opacity: 0">
-                    <div class="input_group">
-                        <input class="input_text" id="contrasena" type="password" placeholder="Contraseña">
-                    </div>
-                    <br>
-                    <div class="button_group">
-                        <input class="button button_green" id="button_entrar" type="submit" value="Iniciar Sesión">
-                    </div>
-                </form> 
-                
+            <div class="duo duo2">
+                <div class="dot dot-a"></div>
+                <div class="dot dot-b"></div>
             </div>
-            <div id="load-bar">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
+            <br /><br />
+            <p>Cargando...</p>
         </div>
-    </body>
+    </div>
+    <div class="container_login">
+        <div class="container_logo">
+            <a class="mx-auto mx-auto-top" href="#"
+                style="text-shadow: 0 0 5px black, 0 0 10px rgba(0,0,0,.3);color: white; font-size: 90px; vertical-align: middle; text-decoration: none;">DOC<span
+                    style="text-shadow: 0 0 3.5px black; color: #3399ff">SYS</span></a>
+        </div>
+        <div style="width: 100vw;">
+            <form id="login_form" class="login_form max_width" onsubmit="iniciarSesion()">
+                <div class="input_group">
+                    <label>Ingrese su correo de usuario</label>
+                    <input class="input_text" id="email" type="text" placeholder="Usuario">
+                    <span
+                        style="position: absolute; left: calc(50% + 75px); bottom: calc(50% - 165px); font-size: 10px"><a
+                            href="">Olvidó su contraseña</a><i class="fas fa-question-circle"
+                            style="color:rgba(51,153,255,0.5);"></i></span>
+
+                </div>
+                <br>
+                <div class="button_group">
+                    <input class="button button_green" id="button_entrar" type="submit" value="Siguiente">
+                </div>
+            </form>
+            <form title="Cambio de contraseña" id="change_pass" onsubmit="changePass()" class="login_form min_width"
+                style="opacity: 0">
+                <div class="input_group">
+                    <label>Establezca su nueva contraseña</label>
+                    <input class="input_text" id="contrasenac" type="password" placeholder="Contraseña">
+                    <input class="input_text" id="contrasenac1" type="password" placeholder="Repita la Contraseña">
+                </div>
+                <br>
+                <div class="button_group">
+                    <input class="button button_green" id="button_entrar" type="submit" value="Cambiar">
+                </div>
+            </form>
+            <form id="login_form2" class="login_form min_width" onsubmit="iniciarSesion2()"
+                style="margin-left:0px;opacity: 0">
+                <div class="input_group">
+                    <label>Ingrese su contraseña</label>
+                    <input class="input_text" id="contrasena" type="password" placeholder="Contraseña">
+                    <span
+                        style="position: absolute; left: calc(50% + 75px); bottom: calc(50% - 165px); font-size: 10px"><a
+                            href="">Olvidó su contraseña</a><i class="fas fa-question-circle"
+                            style="color:rgba(51,153,255,0.5);"></i></span>
+                </div>
+                <br>
+                <div class="button_group">
+                    <input class="button button_green" id="button_entrar" type="submit" value="Iniciar Sesión">
+                </div>
+            </form>
+        </div>
+        <div id="load-bar">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
+    </div>
+</body>
 
 </html>
